@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10938] "FlowMapCreator skal oprette en liste af instanser af IPluggable"
    - bug [10946] "Fjern XMLHarvester fra koden."
    - bug [10913] "Datadockmanager bruger DatadockJobsMap til verificering"
    - bug [10945] "Få alias argumentet væk fra workflows.xml"
